Use Path.of() instead of Paths.get()
Path.of() makes Paths.get() obsolete in Java 11

Change-Id: Ifeafe5bdd9cbd3bbe13f86955bb888734ca5984d
Signed-off-by: Edwin Kempin <ekempin@google.com>